--- a/preprocess_docker/Dockerfile
+++ b/preprocess_docker/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.8
 
-RUN pip install pandas
+
 RUN apt -o Acquire::Check-Valid-Until=false -o Acquire::Check-Date=false update
 RUN apt -o Acquire::Check-Valid-Until=false -o Acquire::Check-Date=false install libcurl4-openssl-dev libssl-dev -y
+RUN pip install pandas
+RUN pip install hdfs
 RUN pip install pycurl
 RUN pip install certifi
 
